--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>All Places</h1>
+    <a href="/places/create">Add New Place</a>
     <ul>
       <% for(const place of places) { %>
       <li><a href="places/<%= place.id %>"> <%= place.title %></a></li>
