--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -8,6 +8,7 @@
   <body>
     <h1>Details Place</h1>
     <a href="/places">All Places</a>
+    <a href="/places/<%= place.id %>/edit/">Edit Place</a>
 
     <ul>
       <li><%= place.title %></li>
