--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -10,7 +10,7 @@
     <a href="/places/create">Add New Place</a>
     <ul>
       <% for(const place of places) { %>
-      <li><a href="places/<%= place.id %>"> <%= place.title %></a></li>
+      <li><a href="/places/<%= place.id %>"> <%= place.title %></a></li>
       <% } %>
     </ul>
   </body>
