ejs mate template

--- a/views/places/create.ejs
+++ b/views/places/create.ejs
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BestPoint - Add Place</title>
-  </head>
-  <body>
-    <h1>Add a New Place</h1>
-    <a href="/places">Back</a>
-    <form action="/places" method="post">
-      <div>
-        <label for="title">Title Place</label>
-        <input type="text" name="place[title]" id="title" />
-      </div>
-      <div>
-        <label for="description">Description</label>
-        <input type="text" name="place[description]" id="description" />
-      </div>
-      <div>
-        <label for="location">Location</label>
-        <input type="text" name="place[location]" id="location" />
-      </div>
-      <div>
-        <label for="price">Price</label>
-        <input type="text" name="place[price]" id="price" />
-      </div>
-      <button type="submit">Add Place</button>
-    </form>
-  </body>
-</html>
+<% layout('layouts/app') %>
+<h1>Add a New Place</h1>
+<a href="/places">Back</a>
+<form action="/places" method="post">
+  <div>
+    <label for="title">Title Place</label>
+    <input type="text" name="place[title]" id="title" />
+  </div>
+  <div>
+    <label for="description">Description</label>
+    <input type="text" name="place[description]" id="description" />
+  </div>
+  <div>
+    <label for="location">Location</label>
+    <input type="text" name="place[location]" id="location" />
+  </div>
+  <div>
+    <label for="price">Price</label>
+    <input type="text" name="place[price]" id="price" />
+  </div>
+  <button type="submit">Add Place</button>
+</form>
