--- a/views/places/edit.ejs
+++ b/views/places/edit.ejs
@@ -1,43 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BestPoint - Add Place</title>
-  </head>
-  <body>
-    <h1>Edit Place</h1>
-    <a href="/places/<%= place.id %>">Back</a>
-    <form action="/places/<%= place._id %>?_method=PUT" method="post">
-      <label for="title">Title Place</label>
-      <input
-        type="text"
-        name="place[title]"
-        id="title"
-        value="<%= place.title %>"
-      />
-      <label for="description">Description</label>
-      <input
-        type="text"
-        name="place[description]"
-        id="description"
-        value="<%= place.description %>"
-      />
-      <label for="location">Location</label>
-      <input
-        type="text"
-        name="place[location]"
-        id="location"
-        value="<%= place.location %>"
-      />
-      <label for="price">Price</label>
-      <input
-        type="text"
-        name="place[price]"
-        id="price"
-        value="<%= place.price %>"
-      />
-      <button type="submit">Edit Place</button>
-    </form>
-  </body>
-</html>
+<% layout('layouts/app') %>
+<h1>Edit Place</h1>
+<a href="/places/<%= place.id %>">Back</a>
+<form action="/places/<%= place._id %>?_method=PUT" method="post">
+  <label for="title">Title Place</label>
+  <input
+    type="text"
+    name="place[title]"
+    id="title"
+    value="<%= place.title %>"
+  />
+  <label for="description">Description</label>
+  <input
+    type="text"
+    name="place[description]"
+    id="description"
+    value="<%= place.description %>"
+  />
+  <label for="location">Location</label>
+  <input
+    type="text"
+    name="place[location]"
+    id="location"
+    value="<%= place.location %>"
+  />
+  <label for="price">Price</label>
+  <input
+    type="text"
+    name="place[price]"
+    id="price"
+    value="<%= place.price %>"
+  />
+  <button type="submit">Edit Place</button>
+</form>
