--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BestPoint - <%= place.title %></title>
-  </head>
-  <body>
-    <h1>Details Place</h1>
-    <a href="/places">All Places</a>
-    <a href="/places/<%= place.id %>/edit/">Edit Place</a>
+<% layout('layouts/app') %>
+<h1>Details Place</h1>
+<a href="/places">All Places</a>
+<a href="/places/<%= place.id %>/edit/">Edit Place</a>
 
-    <ul>
-      <li><%= place.title %></li>
-      <li><%= place.description %></li>
-      <li><%= place.location %></li>
-      <li><%= place.price %></li>
-    </ul>
-    <form action="/places/<%= place._id %>?_method=DELETE" method="post">
-      <button type="submit">Delete</button>
-    </form>
-  </body>
-</html>
+<ul>
+  <li><%= place.title %></li>
+  <li><%= place.description %></li>
+  <li><%= place.location %></li>
+  <li><%= place.price %></li>
+</ul>
+<form action="/places/<%= place._id %>?_method=DELETE" method="post">
+  <button type="submit">Delete</button>
+</form>
