--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BestPoint - Places</title>
-  </head>
-  <body>
-    <h1>All Places</h1>
-    <a href="/places/create">Add New Place</a>
-    <ul>
-      <% for(const place of places) { %>
-      <li><a href="/places/<%= place.id %>"> <%= place.title %></a></li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+<% layout('layouts/app') %>
+<h1>All Places</h1>
+<a href="/places/create">Add New Place</a>
+<ul>
+  <% for(const place of places) { %>
+  <li><a href="/places/<%= place.id %>"> <%= place.title %></a></li>
+  <% } %>
+</ul>
