validate from in client server

--- a/views/layouts/partials/footer.ejs
+++ b/views/layouts/partials/footer.ejs
@@ -1,7 +1,10 @@
-<footer class="footer bg-dark py-3 mt-auto">
-  <div class="container">
-    <span class="text-secondary">
-      &copy; BestPoint <%= new Date().getFullYear() %>
+<footer class="footer bg-dark pt-3 mt-auto">
+  <div
+    class="container d-flex justify-content-center align-items-end text-center"
+    style="min-height: 120px;"
+  >
+    <span class="text-secondary pb-3">
+      &copy; BestPoint <%= new Date().getFullYear() %>, All Right Reserved.
     </span>
   </div>
 </footer>
