--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -59,11 +59,30 @@
         margin-top: auto;
         width: 120px;
       }
+      .img-details {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .nav-back {
+        color: white;
+        text-decoration: none;
+      }
+      .card-thumbnail {
+        border-radius: 0;
+      }
+      a {
+        text-decoration: none;
+      }
     </style>
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
-    <main class="container mt-5">
+    <main>
       <%- body %>
     </main>
     <%- include('partials/footer') %>
@@ -83,4 +102,28 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"
   ></script>
+  <script>
+    (function () {
+      "use strict";
+
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      const forms = document.querySelectorAll(".validated-form");
+
+      // Loop over them and prevent submission
+      Array.prototype.slice.call(forms).forEach(function (form) {
+        form.addEventListener(
+          "submit",
+          function (event) {
+            if (!form.checkValidity()) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+
+            form.classList.add("was-validated");
+          },
+          false
+        );
+      });
+    })();
+  </script>
 </html>
