--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -1,39 +1,43 @@
 <% layout('layouts/app') %>
-<div class="d-flex justify-content-between align-items-center">
-  <h1>All Places</h1>
-  <a href="/places/create" class="btn btn-primary">Add New Place</a>
-</div>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between align-items-center">
+    <h1>All Places</h1>
+    <a href="/places/create" class="btn btn-primary">Add New Place</a>
+  </div>
 
-<ul class="row mt-4">
-  <% for(const place of places) { %>
-  <li class="col-md-4 mb-4 col-sm-6">
-    <div class="card card-custom shadow-sm rounded overflow-hidden">
-      <div class="card-img">
-        <img
-          class="img-fluid img-places"
-          src="<%= place.image %>"
-          alt="<%= place.title %>"
-        />
+  <ul class="row mt-4">
+    <% for(const place of places) { %>
+    <li class="col-md-4 mb-4 col-sm-6">
+      <div class="card card-custom shadow-sm rounded overflow-hidden">
+        <div class="card-img">
+          <img
+            class="img-fluid img-places"
+            src="<%= place.image %>"
+            alt="<%= place.title %>"
+          />
+        </div>
+        <div class="card-body">
+          <figure>
+            <blockquote class="blockquote fs-5">
+              <p class="card-title"><%= place.title %></p>
+            </blockquote>
+            <figcaption class="blockquote-footer fst-italic">
+              <%= place.location %>
+            </figcaption>
+          </figure>
+          <p class="card-text lead fs-6">
+            <% if (place.description.length > 60) { %>
+            <%=place.description.substring(0, 60) %>... <% } else { %>
+            <%=place.description %> <% } %>
+          </p>
+          <a
+            href="/places/<%= place._id %>"
+            class="btn btn-primary fs-6 btn-card"
+            >See Details</a
+          >
+        </div>
       </div>
-      <div class="card-body">
-        <figure>
-          <blockquote class="blockquote fs-5">
-            <p class="card-title"><%= place.title %></p>
-          </blockquote>
-          <figcaption class="blockquote-footer fst-italic">
-            <%= place.location %>
-          </figcaption>
-        </figure>
-        <p class="card-text lead fs-6">
-          <% if (place.description.length > 60) { %>
-          <%=place.description.substring(0, 60) %>... <% } else { %>
-          <%=place.description %> <% } %>
-        </p>
-        <a href="/places/<%= place.id %>" class="btn btn-primary fs-6 btn-card"
-          >See Details</a
-        >
-      </div>
-    </div>
-  </li>
-  <% } %>
-</ul>
+    </li>
+    <% } %>
+  </ul>
+</div>
