delete Place & Review

--- a/views/places/create.ejs
+++ b/views/places/create.ejs
@@ -10,7 +10,7 @@
   <h1 class="text-center">
     Add a <span class="text-success fw-bold">New Place</span>
   </h1>
-  <div class="col-6 offset-3 mt-3">
+  <div class="col-sm-6 mt-3 mx-auto">
     <form
       action="/places"
       method="post"
@@ -101,4 +101,3 @@
     </form>
   </div>
 </div>
-
