--- a/views/places/edit.ejs
+++ b/views/places/edit.ejs
@@ -10,7 +10,7 @@
   <h1 class="text-center">
     Edit a <span class="text-success fw-bold">Place</span>
   </h1>
-  <div class="col-6 offset-3 mt-3">
+  <div class="col-sm-6 mt-3 mx-auto">
     <form
       action="/places/<%= place._id %>?_method=PUT"
       method="post"
