--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -99,7 +99,7 @@
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
     <main>
-      <%- body %>
+      <%= success_msg %> <%- body %>
     </main>
     <%- include('partials/footer') %>
   </body>
