--- a/views/places/create.ejs
+++ b/views/places/create.ejs
@@ -11,93 +11,6 @@
     Add a <span class="text-success fw-bold">New Place</span>
   </h1>
   <div class="col-sm-6 mt-3 mx-auto">
-    <form
-      action="/places"
-      method="post"
-      class="validated-form bg-light p-5 rounded"
-      novalidate
-    >
-      <div class="mb-3">
-        <label for="title" class="form-label">Title Place</label>
-        <input
-          type="text"
-          name="place[title]"
-          id="title"
-          class="form-control"
-          required
-        />
-        <div class="valid-feedback">
-          Loooks good!
-        </div>
-        <div class="invalid-feedback">
-          Please fill out this field.
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
-        <textarea
-          class="form-control"
-          id="description"
-          name="place[description]"
-          style="height: 100px;"
-          required
-        ></textarea>
-        <div class="valid-feedback">
-          Loooks good!
-        </div>
-        <div class="invalid-feedback">
-          Please fill out this field.
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
-        <input
-          type="text"
-          name="place[location]"
-          id="location"
-          class="form-control"
-          required
-        />
-        <div class="valid-feedback">
-          Loooks good!
-        </div>
-        <div class="invalid-feedback">
-          Please fill out this field.
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="price" class="form-label">Price</label>
-        <input
-          type="text"
-          name="place[price]"
-          id="price"
-          class="form-control"
-          required
-        />
-        <div class="valid-feedback">
-          Loooks good!
-        </div>
-        <div class="invalid-feedback">
-          Please fill out this field.
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="image" class="form-label">Image Url</label>
-        <input
-          type="text"
-          name="place[image]"
-          id="image"
-          class="form-control"
-          required
-        />
-        <div class="valid-feedback">
-          Loooks good!
-        </div>
-        <div class="invalid-feedback">
-          Please fill out this field.
-        </div>
-      </div>
-      <button type="submit" class="btn btn-success">Add Place</button>
-    </form>
+    <%- include('../layouts/components/formCreate') %>
   </div>
 </div>
