regist page & logic

--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -24,6 +24,9 @@
           <a class="nav-link" href="/places/create">New Place</a>
         </li>
       </ul>
+      <div class="">
+        <a href="/register" class="btn btn-primary">Register</a>
+      </div>
     </div>
   </div>
 </nav>
