--- a/views/layouts/partials/alert.ejs
+++ b/views/layouts/partials/alert.ejs
@@ -18,7 +18,7 @@
   role="alert"
   id="successAlert"
 >
-  <strong>404 Not Found</strong> (<%= error_msg %>)
+  <%= error_msg %>
   <button
     type="button"
     class="btn-close"
