--- a/views/layouts/components/reviews.ejs
+++ b/views/layouts/components/reviews.ejs
@@ -10,12 +10,14 @@
             %></small
           >
           <small class="font-monospace">Review: <%= review.body %></small>
+          <% if(currentUser) { %>
           <form
             action="/places/<%= place._id %>/reviews/<%= review.id %>?_method=DELETE"
             method="POST"
           >
             <button class="btn btn-danger btn-sm mt-2">Delete</button>
           </form>
+          <% } %>
         </div>
       </li>
     </ul>
