--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-dark sticky-top" data-bs-theme="dark">
-  <div class="container-fluid">
+  <div class="container-fluid px-5">
     <a class="navbar-brand" href="/">BestPoint</a>
     <button
       class="navbar-toggler"
@@ -16,20 +16,52 @@
       class="collapse navbar-collapse d-flex justify-content-between"
       id="navbarNav"
     >
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/places">Places</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/places/create">New Place</a>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle btn btn-primary"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Account
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end dropdown-menu-lg-start"
+            aria-labelledby="navbarDropdown"
+          >
+            <li><a class="dropdown-item" href="/login">Login</a></li>
+            <li><a class="dropdown-item" href="/register">Register</a></li>
+            <% if(currentUser) { %>
+            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="/logout"
+                onclick="event.preventDefault(); document.getElementById('logout-form').submit();"
+                >Logout</a
+              >
+              <form
+                action="/logout"
+                method="POST"
+                style="display: none;"
+                id="logout-form"
+              ></form>
+            </li>
+            <% } %>
+          </ul>
         </li>
       </ul>
-      <div class="">
-        <a href="/register" class="btn btn-primary">Register</a>
-      </div>
     </div>
   </div>
 </nav>
