--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -5,6 +5,7 @@
     <div class="col-sm-6">
       <div class="d-flex justify-content-between align-items-center">
         <h1>Details Place</h1>
+        <% if(currentUser) { %>
         <div class="d-flex gap-2">
           <a href="/places/<%= place._id %>/edit/" class="btn btn-primary"
             >Edit</a
@@ -61,6 +62,7 @@
             </div>
           </div>
         </div>
+        <% } %>
       </div>
       <ul class="my-3 bg-light p-3 rounded">
         <li class="mb-3">
