--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -2,7 +2,9 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center">
     <h1>All Places</h1>
+    <% if(currentUser) { %>
     <a href="/places/create" class="btn btn-primary">Add New Place</a>
+    <% } %>
   </div>
 
   <ul class="row mt-4">
